Done DHCP configuration

--- a/R1/etc/dhcp3/dhcpd.conf
+++ b/R1/etc/dhcp3/dhcpd.conf
@@ -35,15 +35,19 @@ log-facility local7;
 
 ###########LAN1##########################
 subnet 10.0.0.0 netmask 255.255.255.0 { #
-  range 10.0.0.2 10.0.0.254;		#
+  range 10.0.0.150 10.0.0.254;		#
   option routers 10.0.0.1;		#
+  host ServerPriv {			#
+    hardware ethernet 02:01:02:03:04:10;#
+    fixed-address 10.0.0.100;		#
+  }					#
 }					#
 #########################################
 
 
 ###########LAN2##########################
 subnet 10.0.1.0 netmask 255.255.255.0 { #
-  range 10.0.1.2 10.0.1.254;		#
+  range 10.0.1.150 10.0.1.254;		#
   option routers 10.0.1.1;		#
 }					#
 #########################################
@@ -51,16 +55,24 @@ subnet 10.0.1.0 netmask 255.255.255.0 { #
 
 ###########LAN3##########################
 subnet 10.0.2.0 netmask 255.255.255.0 { #
-  range 10.0.2.2 10.0.2.254;		#
+  range 10.0.2.150 10.0.2.254;		#
   option routers 10.0.2.1;		#
 }					#
 #########################################
 
 
-###########LAN4##############################
+###########DMZ###############################
 subnet 160.80.103.0 netmask 255.255.255.0 { #
-  range 160.80.103.2 160.80.103.254;	    #
-  option routers 160.80.103.1;		    #
+  range 160.80.103.150 160.80.103.254;	    #
+  option routers 160.80.103.1;	            #
+  host ServerDNS {			    #
+    hardware ethernet 02:01:02:03:04:08;    #
+    fixed-address 160.80.103.100;	    #
+  }	                                    #
+  host ServerWeb {			    #
+    hardware ethernet 02:01:02:03:04:09;    #
+    fixed-address 160.80.103.101;           #
+  }	                                    #
 }					    #
 #############################################
 
