--- a/R1/etc/dhcp3/dhcpd.conf
+++ b/R1/etc/dhcp3/dhcpd.conf
@@ -11,8 +11,8 @@
 ddns-update-style none;
 
 # option definitions common to all supported networks...
-option domain-name "example.org";
-option domain-name-servers ns1.example.org, ns2.example.org;
+option domain-name "giulia.org";
+option domain-name-servers 160.80.103.100;
 
 default-lease-time 600;
 max-lease-time 7200;
