bind infame per te solo le lame

--- a/R1/etc/dhcp3/dhcpd.conf
+++ b/R1/etc/dhcp3/dhcpd.conf
@@ -8,7 +8,21 @@
 # attempt to do a DNS update when a lease is confirmed. We default to the
 # behavior of the version 2 packages ('none', since DHCP v2 didn't
 # have support for DDNS.)
-ddns-update-style none;
+ddns-updates on;
+ddns-update-style interim;
+update-static-leases on;
+
+key dhcpupdate {
+  algorithm hmac-md5;
+  secret N8Hk2RUFO84bEVl3uGTD2A==;
+}
+
+
+zone giulia.org. {
+  primary 160.80.103.100;
+  key dhcpupdate;
+}
+
 
 # option definitions common to all supported networks...
 option domain-name "giulia.org";
@@ -37,6 +51,7 @@ log-facility local7;
 subnet 10.0.0.0 netmask 255.255.255.0 { #
   range 10.0.0.150 10.0.0.254;		#
   option routers 10.0.0.1;		#
+ddns-domainname "giulia.org.";  
   host ServerPriv {			#
     hardware ethernet 02:01:02:03:04:10;#
     fixed-address 10.0.0.100;		#
@@ -49,6 +64,7 @@ subnet 10.0.0.0 netmask 255.255.255.0 { #
 subnet 10.0.1.0 netmask 255.255.255.0 { #
   range 10.0.1.150 10.0.1.254;		#
   option routers 10.0.1.1;		#
+ddns-domainname "giulia.org.";  
 }					#
 #########################################
 
@@ -57,6 +73,7 @@ subnet 10.0.1.0 netmask 255.255.255.0 { #
 subnet 10.0.2.0 netmask 255.255.255.0 { #
   range 10.0.2.150 10.0.2.254;		#
   option routers 10.0.2.1;		#
+ddns-domainname "giulia.org.";  
 }					#
 #########################################
 
@@ -65,6 +82,7 @@ subnet 10.0.2.0 netmask 255.255.255.0 { #
 subnet 160.80.103.0 netmask 255.255.255.0 { #
   range 160.80.103.150 160.80.103.254;	    #
   option routers 160.80.103.1;	            #
+ddns-domainname "giulia.org.";  
   host ServerDNS {			    #
     hardware ethernet 02:01:02:03:04:08;    #
     fixed-address 160.80.103.100;	    #
