--- a/ServerDNS/etc/bind/named.conf
+++ b/ServerDNS/etc/bind/named.conf
@@ -9,6 +9,13 @@
 include "/etc/bind/named.conf.options";
 
 // prime the server with knowledge of the root servers
+
+key dhcpupdate {
+	algorithm hmac-md5;
+	secret "N8Hk2RUFO84bEVl3uGTD2A==";
+};
+
+
 zone "." {
 	type hint;
 	file "/etc/bind/db.root";
@@ -23,6 +30,7 @@ zone "localhost" {
 zone "giulia.org" {
 	type master;
 	file "/etc/bind/db.org.giulia";
+	allow-update { key dhcpupdate; };
 };
 
 zone "127.in-addr.arpa" {
